# pfennig

./: INSTALL  Makefile.am  README.md  configure.ac
contrib/: README.md  bitmarkd.bash-completion
contrib/bitrpc/: bitrpc.py
contrib/gitian-descriptors/: deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-bitmark.yml  gitian-win.yml  qt-win.yml
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  fancy.plist  macdeployqtplus
contrib/pyminer/: example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: makeseeds.py
contrib/spendfrom/: spendfrom.py
doc/: README.md  README_windows.txt  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  unit-tests.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-bitmarkd-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in
share/certs/: PrivateKeyNotes.md
share/qt/: Info.plist.in
src/: Makefile.am  alert.h  alert.h~  allocators.cpp  allocators.cpp~  allocators.h  base58.cpp  base58.cpp~  base58.h  base58.h~  bignum.h  bignum.h~  bitmark-cli-res.rc  bitmark-cli.cpp  bitmark-cli.cpp~  bitmarkd-res.rc  bitmarkd.cpp  bitmarkd.cpp~  bloom.cpp  bloom.h  chainparams.cpp  chainparams.cpp~  chainparams.h  chainparams.h~  checkpoints.cpp  checkpoints.cpp~  checkpoints.h  checkpoints.h~  checkqueue.h  clientversion.h  clientversion.h~  coincontrol.h  coincontrol.h~  coins.cpp  coins.h  coins.h~  compat.h  core.cpp  core.h  core.h~  (+99 more)
src/m4/: bitmark_qt.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.cpp~  addressbookpage.h  addressbookpage.h~  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  askpassphrasedialog.h~  bitmark.cpp  bitmark.cpp~  bitmarkaddressvalidator.cpp  bitmarkaddressvalidator.cpp~  bitmarkaddressvalidator.h  bitmarkaddressvalidator.h~  bitmarkamountfield.cpp  bitmarkamountfield.cpp~  bitmarkamountfield.h  bitmarkamountfield.h~  bitmarkgui.cpp  bitmarkgui.h  bitmarkgui.h~  bitmarkstrings.cpp  bitmarkunits.cpp  bitmarkunits.h  bitmarkunits.h~  clientmodel.cpp  clientmodel.cpp~  clientmodel.h  clientmodel.h~  coincontroldialog.cpp  coincontroldialog.cpp~  coincontroldialog.h  coincontroldialog.h~  coincontroltreewidget.cpp  coincontroltreewidget.cpp~  coincontroltreewidget.h  coincontroltreewidget.h~  csvmodelwriter.cpp  (+145 more)
src/qt/forms/: aboutdialog.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitmark_ach.ts  bitmark_af_ZA.ts  bitmark_ar.ts  bitmark_be_BY.ts  bitmark_bg.ts  bitmark_bs.ts  bitmark_ca.ts  bitmark_ca@valencia.ts  bitmark_ca_ES.ts  bitmark_cmn.ts  bitmark_cs.ts  bitmark_cy.ts  bitmark_da.ts  bitmark_de.ts  bitmark_el_GR.ts  bitmark_en.ts  bitmark_eo.ts  bitmark_es.ts  bitmark_es_CL.ts  bitmark_es_DO.ts  bitmark_es_MX.ts  bitmark_es_UY.ts  bitmark_et.ts  bitmark_eu_ES.ts  bitmark_fa.ts  bitmark_fa_IR.ts  bitmark_fi.ts  bitmark_fr.ts  bitmark_fr_CA.ts  bitmark_gl.ts  bitmark_gu_IN.ts  bitmark_he.ts  bitmark_hi_IN.ts  bitmark_hr.ts  bitmark_hu.ts  bitmark_id_ID.ts  bitmark_it.ts  bitmark_ja.ts  bitmark_ka.ts  bitmark_kk_KZ.ts  (+31 more)
src/qt/res/: bitmark-qt-res.rc
src/qt/test/: Makefile.am  paymentrequestdata.h  test_main.cpp
src/test/: Checkpoints_tests.cpp  Checkpoints_tests.cpp~  DoS_tests.cpp  DoS_tests.cpp~  accounting_tests.cpp  accounting_tests.cpp~  alert_tests.cpp  alert_tests.cpp~  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base58_tests.cpp~  base64_tests.cpp  base64_tests.cpp~  bignum_tests.cpp  bip32_tests.cpp  bip32_tests.cpp~  bloom_tests.cpp  canonical_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hash_tests.cpp~  hmac_tests.cpp  hmac_tests.cpp~  key_tests.cpp  key_tests.cpp~  main_tests.cpp  main_tests.cpp~  miner_tests.cpp  miner_tests.cpp~  mruset_tests.cpp  mruset_tests.cpp~  multisig_tests.cpp  multisig_tests.cpp~  netbase_tests.cpp  pmt_tests.cpp  pmt_tests.cpp~  rpc_tests.cpp  rpc_wallet_tests.cpp  (+19 more)
src/test/data/: sighash.json
